# snowmass-chat

./: .gitignore  README.md  pyproject.toml
chathelper/: cache.py  cli.py  config.py  mk_url_extractor.py  model.py  questions.py  utils.py
chathelper/fsspec/: arxiv.py  inspirehep.py
chathelper/lc_experimental/: archive_loader.py  arxiv.py
experimental/: README.md  lc_arxiv_loader.py  lc_arxiv_spacy.py  lc_keywords.py  requirements.txt
snowmass/: README.md  licenses.md  snowmass-compare.md  snowmass-questions.yaml  snowmass-v1.0-gtp4-turbo.yaml  snowmass-v1.0-large-embedding-gpt4-7.yaml  snowmass-v1.0-large-embedding.yaml  snowmass-v1.0-n10.yaml  snowmass-v1.0-split1000.yaml  snowmass-v1.0-update.yaml  snowmass-v1.0.yaml  snowmass.yaml  uiuc.yaml
tests/: simple_config.yaml  test_cache.py  test_config.py  test_model.py  test_questions.py  test_questions.yaml  test_utils.py
tests/fsspec/: test_arxiv.py  test_inspirehep.py
